--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -218,7 +218,7 @@ The implication is that upper canopy leaves have higher $g_b$ and associated pot
 ### 1.5 Air temperature 
 Vertical gradients in air temperature ($T_{air}$) differ widely (Fig. `r fig_NEON_vertical`, Supporting Information Figure `r SIfig_NEON_all`) and depend on factors such as vegetation type, local topography, vertical air mixing, cloud cover, sensible heat emissions, and times of day and year [@defrenneForestMicroclimatesClimate2021; @zellweger_seasonal_2019]. 
 Commonly, attenuation of radiation and vertical transport of sensible heat by the canopy buffers the lower canopy and understory from large diel and seasonal swings in air temperature [@defrenneForestMicroclimatesClimate2021; @haesenForestTempSubcanopyMicroclimate2021a; @zellweger_seasonal_2019].
-Typically, diel temperature range is smaller beneath dense canopies than above, resulting from lower maximum daytime $T_{air}$ and warmer nighttime minimum $T_{air}$ than beneath open canopies or in nearby clearings [<!-- @missonPartitioningForestCarbon2007--> @defrenneForestMicroclimatesClimate2021; @vonarxSpatiotemporalEffectsForest2012a; <!--@defrenneGlobalBufferingTemperatures2019; @davisMicroclimaticBufferingForests2019--> @zellweger_seasonal_2019 <!--@ramboCanopyMicroclimateResponse2009; @binLeafTraitExpression2022; @haesenForestTempSubcanopyMicroclimate2021a; @meeussenMicroclimaticEdgetointeriorGradients2021-->]. 
+Diel temperature range is typically smaller beneath dense canopies than above, resulting from lower maximum daytime $T_{air}$ and warmer nighttime minimum $T_{air}$ than beneath open canopies or in nearby clearings [<!-- @missonPartitioningForestCarbon2007--> @defrenneForestMicroclimatesClimate2021; @vonarxSpatiotemporalEffectsForest2012a; <!--@defrenneGlobalBufferingTemperatures2019; @davisMicroclimaticBufferingForests2019--> @zellweger_seasonal_2019 <!--@ramboCanopyMicroclimateResponse2009; @binLeafTraitExpression2022; @haesenForestTempSubcanopyMicroclimate2021a; @meeussenMicroclimaticEdgetointeriorGradients2021-->]. 
 Notably, buffering against high maximum daytime $T_{air}$ becomes weaker and can be reversed as canopies become more open [Supporting Information Figure `r SIfig_NEON_all`,@curtis_intracanopy_2019; @meeussenMicroclimaticEdgetointeriorGradients2021]. 
 Analogous to a 'canopy greenhouse effect', in open forests, below-canopy maximum $T_{air}$ can be warmer than canopy $T_{air}$, due to turbulent air mixing and interception of thermal radiative flux from the soil and the canopy by lower-canopy layers [e.g., OSBS, Fig. `r fig_NEON_vertical`g, Supporting Information Figure `r SIfig_NEON_all`b; <!--@hadleyInfluenceKrummholzMat1987--> @banerjeeExplainingConvectorEffect2017; @curtis_intracanopy_2019;<!--@zweifelMiddayStomatalClosure2002; @ramboCanopyMicroclimateResponse2009; @hardwickRelationshipLeafArea2015--> @mullerEvidenceEfficientNonevaporative2021].
 These usually-modest gradients in $T_{air}$ combine with the above-described gradients in micrometeorological conditions to shape $T_{leaf}$ patterns within canopies.
@@ -462,7 +462,7 @@ Differences across forest vertical gradients in biophysical conditions, plant tr
 Tree metabolism and growth are shaped by crown location in the vertical gradient.
 Tree height, crown volume, and foliage biomass all scale with diameter at breast height (DBH), which strongly predicts tree transpiration  [@meinzerWaterTransportTrees2001;@kunertRevisedHydrologicalModel2017; @anderson-teixeiraSizerelatedScalingTree2015] photosynthesis, and intra-canopy trait variation [@binLeafTraitExpression2022].
 Specifically, increases are linked to increased leaf area and the increasing probability that the crown is in the canopy [@muller-landauTestingMetabolicEcology2006], where higher light availability results in higher leaf area-specific photosynthesis (Table `r table_leaf_metabolism`).
-Photosynthate production is allocated among functions including respiration, above-ground woody growth, foliar turnover, root growth and allocation to root-associated microorganisms, reproduction, defense, and storage of non-structural carbohydrates (NSCs). 
+Photosynthate production is allocated among functions including respiration, aboveground woody growth, foliar turnover, root growth and allocation to root-associated microorganisms, reproduction, defense, and storage of non-structural carbohydrates (NSCs). 
 Among these, the best-studied process is aboveground woody growth, which consumes only a modest fraction of total photosynthate [~1/6 on the ecosystem level, @anderson-teixeiraCarbonCyclingMature2021] but is disproportionately important to long-term forest dynamics and carbon cycling because woody tissues have a long residence time in the ecosystem [@russellResidenceTimesDecay2014].
 Radial stem growth may increase or decrease over time as trees grow in DBH depending on the light environment [@anderson-teixeiraJointEffectsClimate2022].
 In open forests and for open-growth individual trees, growth rate declines with DBH [@muller-landauTestingMetabolicEcology2006; @anderson-teixeiraJointEffectsClimate2022], whereas growth rate consistently increases with DBH for trees established in the understory of a closed-canopy forest [@muller-landauTestingMetabolicEcology2006; @anderson-teixeiraSizerelatedScalingTree2015]. 
