--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -461,7 +461,7 @@ Differences across forest vertical gradients in biophysical conditions, plant tr
 
 Tree metabolism and growth are shaped by crown location in the vertical gradient.
 Tree height, crown volume, and foliage biomass all scale with diameter at breast height (DBH), which strongly predicts tree transpiration  [@meinzerWaterTransportTrees2001;@kunertRevisedHydrologicalModel2017; @anderson-teixeiraSizerelatedScalingTree2015] photosynthesis, and intra-canopy trait variation [@binLeafTraitExpression2022].
-Specifically, increases are linked to increased leaf area and the increasing probability that the crown is in the canopy [@muller-landauTestingMetabolicEcology2006], where higher light availability results in higher leaf area-specific photosynthesis (Table `r table_leaf_metabolism`).
+Specifically, increases are linked to increased leaf area and the increasing probability that the crown is in the canopy [@muller-landauTestingMetabolicEcology2006], where leaves receive more light and have higher leaf area-specific photosynthesis (Table `r table_leaf_metabolism`).
 Photosynthate production is allocated among functions including respiration, aboveground woody growth, foliar turnover, root growth and allocation to root-associated microorganisms, reproduction, defense, and storage of non-structural carbohydrates (NSCs). 
 Among these, the best-studied process is aboveground woody growth, which consumes only a modest fraction of total photosynthate [~1/6 on the ecosystem level, @anderson-teixeiraCarbonCyclingMature2021] but is disproportionately important to long-term forest dynamics and carbon cycling because woody tissues have a long residence time in the ecosystem [@russellResidenceTimesDecay2014].
 Radial stem growth may increase or decrease over time as trees grow in DBH depending on the light environment [@anderson-teixeiraJointEffectsClimate2022].
