--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -58,14 +58,14 @@ SIfig_NEON_all_legend <- "Figure S1. Vertical gradients in micrometeorological c
 
 #Word count
 w_intro=414
-w_biophys=1580
-w_tleaf=758
-w_traits= 2477
+w_biophys=1576
+w_tleaf=752
+w_traits= 2471
 w_met=1000
-w_ecol=1352
+w_ecol=1353
 w_vertgradients=w_biophys+w_tleaf+w_traits+w_met+w_ecol
-w_imp_gc=1102
-w_imp_modeling_scaling=1231
+w_imp_gc=1088
+w_imp_modeling_scaling=1229
 w_implications=w_imp_gc+w_imp_modeling_scaling
 w_conclusions=248
 w_total=w_intro+w_vertgradients+w_implications+w_conclusions
@@ -191,7 +191,7 @@ Canopy foliage absorbs a large portion of PAR (400-700nm), and selectively filte
 The ratio of red (~685-690 nm) to far red (~730-740 nm) light declines along qith total PAR with increasing depth in the canopy, and understories receive diffuse light enriched in near infrared radiation (700-1000 nm)  [@decastroLightSpectralComposition2000; @poorterLeafOpticalProperties2000].
 Mid-canopies and understories experience a highly dynamic light environment due to sunflecks, or brief increases in direct solar radiation, caused by small canopy gaps, wind-induced canopy movements or the sun's passage across a dynamically structured canopy surface [@waySunflecksTreesForests2012].
 This light gradient is more pronounced in dense canopies, including broad-leaf and mixed forests (e.g., SCBI, SERC and HARV, Fig. `r fig_NEON_vertical`d), than in forests with more open upper canopies, including many conifer forests [e.g., OSBS, PUUM, and WREF, Fig. `r fig_NEON_vertical`d, Supporting Information Figure `r SIfig_NEON_all`, @chazdonPhotosyntheticLightEnvironments1984; @aussenacInteractionsForestStands2000a; @tymenQuantifyingMicroenvironmentalVariation2017;  @parkerConsequencesEnvironmentalHeterogeneity2019; @bartemucciOverstoryInfluencesLight2006; @baldocchiSeasonalVariationEnergy1997]. 
-This light gradient drives variation in leaf traits (Table 1), photosynthetic capacity (see section 4.2) and leaf temperature (see sections 2, 4.2).
+This light gradient drives variation in leaf traits (Table 1), photosynthetic capacity (section 4.2) and leaf temperature (sections 2, 4.2).
 
 ### 1.3 Turbulent transport and wind
 Vertical transport in forest canopies is dominated by turbulent transport, making vertical profiles of wind speed, water vapor, CO~2~, and temperature more difficult to predict and to generalize on the basis of theoretical first principles compared to radiation profiles. 
@@ -203,7 +203,7 @@ These "sweep-eject" events can couple understory conditions more directly to con
 
 Despite these complexities of within-canopy transport, wind speeds are generally much higher at the top of the canopy than within or beneath [@juckerCanopyStructureTopography2018; @jiao-junWindProfilesTrees2004].
 This holds true across the range of forest types [Fig. `r fig_NEON_vertical`e, Supporting Information Figure `r SIfig_NEON_all`, @barnardSeasonalVariationCanopy2016; @mcgregorTreeHeightLeaf2021; @juckerCanopyStructureTopography2018; @mullerEvidenceEfficientNonevaporative2021; @hanberryOpenForestEcosystems2020; @hanberryReconceptualizationOpenOak2018] and savannas [@curtis_intracanopy_2019;@johnstonWhatLiesVerticalinpress]. 
-Thus, upper canopy leaves have substantially higher boundary layer conductance ($g_b$) and therefore greater potential for exchange of both mass and sensible heat exchange (see sections 2, 4.1).
+Thus, upper canopy leaves have substantially higher boundary layer conductance ($g_b$) and therefore greater potential for exchange of both mass and sensible heat exchange (sections 2, 4.1).
 
 ### 1.4 Atmospheric concentrations of CO~2~ and water vapor
 Atmospheric CO~2~ concentrations tend to be higher near the ground at night, associated with plant and soil respiration, although the elevated CO~2~ quickly dissipates during the day [@koike_leaf_2001; @yang_spatial_1999]. 
@@ -215,7 +215,7 @@ Relative humidity (RH) tends to be higher in the understory and decreases with h
 Dense-canopy forests maintain higher daily maximum RH in the understory than open forests and nearby open areas, an effect that is greater in wetter conditions, and warmer months [@vonarxSpatiotemporalEffectsForest2012a; @hanberryOpenForestEcosystems2020]. 
 In combination with $T_{air}$ and $T_{leaf}$, RH determines leaf-to-air vapor pressure deficit (VPD) -- the driving force of water loss from leaves -- which tends to be greater in the upper canopy and canopy gaps than in the understory [@fauset_differences_2018; @tymenQuantifyingMicroenvironmentalVariation2017; @niinemetsPhotosyntheticAcclimationSimultaneous2004]. 
 Especially when canopy height and LAI are large, maximum $T_{air}$ and VPD are reduced in the understory [@juckerCanopyStructureTopography2018].
-The implication is that upper canopy leaves have higher $g_b$ and associated potential for water and heat loss (see sections 2, 4.1).
+The implication is that upper canopy leaves have higher $g_b$ and associated potential for water and heat loss (sections 2, 4.1).
 
 ### 1.5 Air temperature 
 Vertical gradients in air temperature ($T_{air}$) differ widely (Fig. `r fig_NEON_vertical`, Supporting Information Figure `r SIfig_NEON_all`) and depend on factors such as vegetation type, local topography, vertical air mixing, cloud cover, sensible heat emissions, and times of day and year [@defrenneForestMicroclimatesClimate2021; @zellweger_seasonal_2019]. 
@@ -231,7 +231,7 @@ $T_{leaf}$ is strongly tied, and usually within a few degrees of, $T_{air}$ [@dr
 Deviation of $T_{leaf}$ from $T_{air}$ is influenced by other micrometeorological drivers and by leaf traits and stomatal conductance (Fig. `r fig_leaf_T`; Note `r Notes_leafTbiophysics`), all of which vary across forest vertical gradients (Fig. `r fig_schematic`).
 High radiation in the upper canopy (Fig. `r fig_NEON_vertical`) implies that upper canopy leaves often have higher $T_{leaf}-T_{air}$, and thus are often warmer than understory leaves (Fig. `r fig_leaf_T`a).
 However, higher wind speeds (Fig. `r fig_NEON_vertical`) reduce $T_{leaf}-T_{air}$ [Fig. `r fig_leaf_T`b, @niinemetsPhotosyntheticAcclimationSimultaneous2004; @bonan_ecological_2016]. 
-In addition, adaptive leaf traits that increase $g_b$ and $g_s$ (see sections 3, 4.1) mediate the direct effects of solar radiation on upper canopy leaves and result in higher rates of heat loss (Fig. `r fig_leaf_T`b-e). 
+In addition, adaptive leaf traits that increase $g_b$ and $g_s$ (sections 3, 4.1) mediate the direct effects of solar radiation on upper canopy leaves and result in higher rates of heat loss (Fig. `r fig_leaf_T`b-e). 
 In contrast, in the lower canopy, greater RH and lower wind speeds may limit $\lambda E$ (through reduced VPD and $g_b$), increasing $T_{leaf}$ [Fig. `r fig_leaf_T`, @perezIncreasingHumidityThreatens2018; @tibbittsHumidityPlants1979].
 Leaves in these normally-shaded locations experience rapid light and temperature surges during sunflecks (>10$^\circ$C)  [@waySunflecksTreesForests2012].
 
@@ -304,24 +304,24 @@ $\ddagger$ 1. Mau et al. 2018; 2. Coble and Cavaleri 2014; 3. Sack et al. 2006; 
 Sun leaves have anatomical, morphological, and physiological traits that reduce $T_{leaf}$ through higher conductance ($g_b$ or maximal $g_s$) and/or reflectance (Table `r table_leaf_traits`). 
 Thus, sun leaves are generally smaller and thicker, with higher LMA, and are more deeply lobed [Fig. `r fig_leaf_T`, @vogelSunLeavesShade1968; @zwienieckiHydraulicLimitationsImposed2004; @sackHowStrongIntracanopy2006; @leighInfluenceLeafSize2017], but with greater leaf packing and clumping (which reduces $g_b$).
 Steeper leaf angles reduce mid-day radiation loads and thereby decrease $T_{leaf}-T_{air}$ [@niinemetsAdjustmentFoliageStructure1998; @ballMaintenanceLeafTemperature1988], while higher trichome density increases reflectance, also decreasing radiation load.
-Further, sun leaves tend to have higher stomatal and vein densities, which fascilitate evaporative cooling by enabling higher $g_s$ [see section 4.1, @zwienieckiHydraulicLimitationsImposed2004]. 
+Further, sun leaves tend to have higher stomatal and vein densities, which fascilitate evaporative cooling by enabling higher $g_s$ [section 4.1, @zwienieckiHydraulicLimitationsImposed2004]. 
 Yet sun leaves also have adaptations to limit water stress, particularly in drier climates, including greater cuticle thickness and higher trichome density [which may reduce or increase $g_b$; @schreuderModelledInfluencesNonexchanging2001; @ichieEcologicalDistributionLeaf2016a].
 In contrast, shade leaves have traits that maximize light capture (e.g., lower LMA and greater light absorptance per unit biomass), but larger leaves and lower transpiration make them more prone to overheating than sun leaves [@leighInfluenceLeafSize2017; @casasSunShadeLeaves2011; @schymanskiStomatalControlLeaf2013]. 
 In open canopies, where light is comparatively homogeneous, leaf traits may be shaped more by maximum $T_{air}$ and VPD stress than by light [@mediavillaFoliarPlasticityRelated2019a].
 
 ## 3.2. Leaf optical properties
 Leaf optical properties are influenced by anatomical, morphological, and biochemical traits, that vary throughout the canopy, as outlined in sections 3.1 and 3.3.
-High in the canopy, high light absorptance can lead to photoinhibition and would be in part be mitigated by $T_{leaf}$ regulation (see sections 3.4 and 3.5; Table `r table_leaf_traits`). 
+High in the canopy, high light absorptance can lead to photoinhibition and would be in part be mitigated by $T_{leaf}$ regulation (sections 3.4 and 3.5; Table `r table_leaf_traits`). 
 For leaves in higher light environments, light absorptance and thus heat load can be reduced by leaf surface modifications that increase reflectance, such as trichome and cuticle, and heat may be dissipated biochemically  by carotenoids, including xanthophylls [Table `r table_leaf_traits`, @leeCorrelatesLeafOptical1990; @knappVariabilityLeafOptical1998].
 Further, sun leaves tend to be thicker, with more palisade layers, which act as “light pipes”, and channel abundant light into deeper cell layers, enhancing photosynthetic capacity  [@poorterLeafOpticalProperties1995; @leeCorrelatesLeafOptical1990]. 
 In contrast, shade leaves have lower LMA and absorb more light per unit mass investment, as well as denser chloroplasts layers and a greater proportion of spongy mesophyll, more effective for capturing diffuse light (Table `r table_leaf_traits`) [@poorterLeafOpticalProperties1995; @poorterLeafOpticalProperties2000; @leeCorrelatesLeafOptical1990]. 
 
 ## 3.3. Metabolic capacity and efficiency
 
-Most leaf biochemical traits also vary across light and height gradients (Table `r table_leaf_traits`), both shaping and resulting from gradients in metabolism (see section 4, Table `r table_leaf_metabolism`).
+Most leaf biochemical traits also vary across light and height gradients (Table `r table_leaf_traits`), both shaping and resulting from gradients in metabolism (section 4, Table `r table_leaf_metabolism`).
 Sun leaves have higher concentrations area-based concentrations of elements like nitrogen ($N_{area}$) and phosphorus ($P_{area}$) that are critical for respiration [@meirLeafRespirationTwo2001;@weerasingheCanopyPositionAffects2014] and photosynthesis [@scartazzaInvestigatingEuropeanBeech2016a; @niinemetsPhotosyntheticAcclimationSimultaneous2004; @weerasingheCanopyPositionAffects2014].
 Increases in chlorophyll a/b ratios with height reflect greater light availability in the upper canopy, while greater chlorophyll concentrations at lower heights within the forest vertical profile increase PAR absorptance efficiency of shade leaves (Table `r table_leaf_traits`).
-Higher photosynthetic rates (per unit leaf area) and more frequent stomatal closure in sun exposed canopies (see section 4, Table `r table_leaf_metabolism`) compared to shaded lower canopies, reduce intercellular CO~2~ concentrations and increase leaf $\delta^{13}$C (Table `r table_leaf_traits`).
+Higher photosynthetic rates (per unit leaf area) and more frequent stomatal closure in sun exposed canopies (section 4, Table `r table_leaf_metabolism`) compared to shaded lower canopies, reduce intercellular CO~2~ concentrations and increase leaf $\delta^{13}$C (Table `r table_leaf_traits`).
 
 
 
@@ -334,7 +334,7 @@ A ubiquitous defense is a rapidly inducible non-photochemical quenching (NPQ) me
 This form of NPQ entails interconversion of xanthophyll cycle pigments—violaxanthin, antheraxanthin, and zeaxanthin (VAZ)—which regulates the capacity for de-excitation of chlorophyll through thermal dissipation instead of photochemistry.
 Due to higher leaf temperatures and hydraulic limitations, upper canopy leaves spend more time with stomata closed (Table 2), and therefore require a high capacity to dissipate excess light energy [@niinemetsPhotosynthesisResourceDistribution2007].
 Correspondingly, leaves in higher light environments show a greater capacity for NPQ and higher concentrations of VAZ as well as other carotenoids (e.g., beta carotene and lutein) employed as antioxidant defenses [Table `r table_leaf_traits`, @niinemetsAcclimationHighIrradiance1998; @garcia-plazaolaAcclimationAntioxidantPools2004a; @scartazzaInvestigatingEuropeanBeech2016a].
-In contrast, to maximize photosynthesis and minimize damage during $T_{leaf}$ surges caused by sunflecks (see section 2), shade-acclimated leaves tend to induce photochemical processes more quickly [@urbanInductionPhotosynthesisImportance2007], and also show a steeper response of NPQ to light than sun-acclimated upper canopy leaves [@scartazzaInvestigatingEuropeanBeech2016a].
+In contrast, to maximize photosynthesis and minimize damage during $T_{leaf}$ surges caused by sunflecks (section 2), shade-acclimated leaves tend to induce photochemical processes more quickly [@urbanInductionPhotosynthesisImportance2007], and also show a steeper response of NPQ to light than sun-acclimated upper canopy leaves [@scartazzaInvestigatingEuropeanBeech2016a].
 
 <!--VOCs-->
 Heat-sensitive, light-dependent (photosynthetically linked) emissions of volatile organic compounds (VOCs), including isoprene and monoterpenes, enhances photosynthetic thermal tolerance by regulating antioxidant defenses and other metabolic processes [@sharkeyIsopreneEmissionPlants2008; @taylorCapacityEmitIsoprene2019; @monsonLeafIsopreneEmission2021; @vickersUnifiedMechanismAction2009; @copoloviciCapacityThermalProtection2005; @riedlmeierMonoterpenesSupportSystemic2017]. 
@@ -346,7 +346,7 @@ Within species, isoprene emission tends to increase toward brighter and hotter m
 However, a recent study found a contrasting interspecific vertical structuring of emission capacities, with more emitting species and higher species-maximum emission rates in the mid-canopy of an Amazonian forest [Table `r table_leaf_traits`, @taylorNewFieldInstrument2021]. 
 Similarly, within European beech crowns, monoterpene emissions were highest in semi-shaded leaves beneath the canopy surface [Table `r table_leaf_traits`, @simpragaVerticalCanopyGradient2013]. 
 This pattern may indicate the importance of temporal variability in thermal conditions as distinct from the long-term average. 
-Temperature-sensitive VOC emissions have been hypothesized to enable real-time acclimation to rapidly changing leaf thermal environments typical of the mid-canopy region [see section 1, @sharkeyIsopreneEmissionPlants2008]. 
+Temperature-sensitive VOC emissions have been hypothesized to enable real-time acclimation to rapidly changing leaf thermal environments typical of the mid-canopy region [section 1, @sharkeyIsopreneEmissionPlants2008]. 
 Future work to understand how temporal dynamics of $T_{leaf}$ [see @leighInfluenceLeafSize2017] vary with height and influence leaf function will be important for resolving the role of VOCs in forest thermal sensitivity across the vertical gradient. 
 Given current understanding, we may hypothesize that light-dependent VOC emissions are important for mid-canopy thermal responses, while other traits play similar roles in upper-canopy leaves.
 
@@ -488,7 +488,7 @@ The relative importance of exposure versus height in shaping drought sensitivity
 
 Although drought sensitivity clearly increases with crown height and hence with DBH, it remains unclear how growth sensitivity to high $T_{air}$, independent of drought, varies along the vertical gradient.
 High $T_{air}$ is often associated with high VPD and atmospheric drought, likely explaining negative growth responses to $T_{air}$ -- particularly among larger trees -- even if soil moisture remains high [@novickIncreasingImportanceAtmospheric2016], or when precipitation is statistically accounted for [Fig. `r fig_treerings`, @anderson-teixeiraJointEffectsClimate2022].
-However, under well-watered conditions conducive to high $g_s$, we do not necessarily expect higher thermal sensitivity of photosynthesis (see section 4.2) or woody growth in upper-canopy trees than their understory counterparts. 
+However, under well-watered conditions conducive to high $g_s$, we do not necessarily expect higher thermal sensitivity of photosynthesis (section 4.2) or woody growth in upper-canopy trees than their understory counterparts. 
 In eight mesic forests across the northeast United States, tree-ring records showed steep growth declines of understory trees at higher $T_{air}$, contrasting with the responses of canopy trees [Fig `r fig_treerings`, @rollinsonClimateSensitivityUnderstory2020].
 Additional research is required to understand the mechanisms underlying these intriguing differences, and to disentangle size-related tree growth responses to hot-wet versus hot-dry conditions. 
 
@@ -540,7 +540,7 @@ In contrast, understory leaves and trees are unlikely to face the same absolute 
 Protection from thermal stress associated with high direct radiation might allow shaded layers to photosynthesize longer in the day [@millerOnlySunlitLeaves2021; @heChangesShadowShifting2018a].
 However, with $T_{air}$ more frequently equaling or exceeding photosynthetic optima, occasional exposure to sunflecks coupled with lower capacity to dissipate excess heat may prove disadvantageous. 
 <!--Moreover, increased nighttime $T_{air}$ may disproportionately increase respiration relative to photosynthesis, thereby negatively affecting the carbon balance.-->
-While it is currently difficult to predict whether canopy or understory photosynthesis will be more severely affected by warming (see section 4.2), limited tree-ring evidence indicates that unusually hot growing seasons can reduce growth more for understory trees [section 5.1, Fig `r fig_treerings`b, @rollinsonClimateSensitivityUnderstory2020].
+While it is currently difficult to predict whether canopy or understory photosynthesis will be more severely affected by warming (section 4.2), limited tree-ring evidence indicates that unusually hot growing seasons can reduce growth more for understory trees [section 5.1, Fig `r fig_treerings`b, @rollinsonClimateSensitivityUnderstory2020].
 Thus, while canopy trees are probably more vulnerable to mortality from distinct heat-related disturbances, such as drought or heat waves, trees in the understory might be more negatively affected by chronic stress from warming $T_{air}$, which may reduce growth and increase the risk of carbon starvation in these small trees, whose lower NSC reserves make them more vulnerable [@niinemetsResponsesForestTrees2010].
 
 ### Canopy disturbance
@@ -570,7 +570,7 @@ Ultimately, to achieve the important goal of understanding feedbacks between the
 Future forest dynamics remain one of the largest sources of uncertainty in Earth system model projections of global carbon cycling [@friedlingsteinClimateCarbonCycle2006; @aroraCarbonConcentrationCarbon2020].
 Dynamic global vegetation models (DGVMs), which comprise the land surface models in Earth system models, are used to predict the global distribution of vegetation types and biosphere-atmosphere feedbacks [@foleyIntegratedBiosphereModel1996; @sitchEvaluationEcosystemDynamics2003; @woodwardVegetationDynamicsSimulating2004]. 
 DGVMs operate at a range of scales and vary in complexity, from detailed individual-based models (i.e., forest gap models), which represent vegetation at the level of individual plants, which capturing spatial variability in light environment and microclimates at high 3D spatial resolution [@shugartGapModelsTheir2018], to big-leaf models that reduce 3D vegetation structure to single vegetation layer, implicitly capturing vertical profiles in light, photosynthetic capacity and other features by assuming those profiles are exponential and thus can be integrated analytically [@bonanDynamicGlobalVegetation2003; @krinnerDynamicGlobalVegetation2005]. 
-This simplification is computationally more efficient, but does not always capture observed vertical profiles (sections 1-4; for example, vertical shifts in the balance between stomatal conductance and photosynthetic capacity, see sections 4.1-4.2) and cannot capture important demographic processes and vertical light competition [@hurttTerrestrialModelsGlobal1998; @krinnerDynamicGlobalVegetation2005; @smithRepresentationVegetationDynamics2001]. 
+This simplification is computationally more efficient, but does not always capture observed vertical profiles (sections 1-4; for example, vertical shifts in the balance between stomatal conductance and photosynthetic capacity, sections 4.1-4.2) and cannot capture important demographic processes and vertical light competition [@hurttTerrestrialModelsGlobal1998; @krinnerDynamicGlobalVegetation2005; @smithRepresentationVegetationDynamics2001]. 
 The computational middle-ground lies in cohort-based models, which represent vegetation as cohorts of individuals, grouped together based on properties including size, age, and functional type [@fisherVegetationDemographicsEarth2018].
 
 Owing to differences in the representation of forest vertical strata, DVGMs vary in their capacity to incorporate vertical variation in leaf traits and physiological processes. 
@@ -587,7 +587,7 @@ Moreover, given the anticipated importance of mid-canopy and understory trees in
 A key question is whether existing models adequately represent the processes that underpin understory and large tree responses to thermal stress.
 Most models have been developed to capture dynamics in the upper canopy, given the disproportionate role of large trees in ecosystem dynamics (Fig. `r fig_ecosystem`). 
 Less attention has focused on developing and validating understory tree dynamics and responses to perturbations in models. 
-This is due in large part to the paucity of observational and experimental studies needed to resolve key patterns and underlying mechanisms (see sections 4, 5).
+This is due in large part to the paucity of observational and experimental studies needed to resolve key patterns and underlying mechanisms (sections 4, 5).
 Pairing of models with observational studies is key to further improving our mechanistic understanding of vertical gradients and their implications.
 
 Though an improvement over big-leaf models, DGVMs that separate the canopy into only two layers [e.g., sunlit and shaded portions, @depurySimpleScalingPhotosynthesis1997] may not be able to capture important within-canopy variation in terms of leaf dynamics [e.g., seasonal shifts in vertical leaf area distributions, Table 1, @smithSeasonalDroughtrelatedChanges2019] and functions (e.g., thermal responses, Table 2). 
