--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -57,7 +57,7 @@ SIfig_NEON_all = "S1"
 SIfig_NEON_all_legend <- "Figure S1. Vertical gradients in micrometeorological conditions for all forested sites in the National Ecological Observatory Network (NEON)"
 
 #Word count
-w_intro=414
+w_intro=374
 w_biophys=1576
 w_tleaf=752
 w_traits= 2471
@@ -65,7 +65,7 @@ w_met=1000
 w_ecol=1353
 w_vertgradients=w_biophys+w_tleaf+w_traits+w_met+w_ecol
 w_imp_gc=1088
-w_imp_modeling_scaling=1229
+w_imp_modeling_scaling=1186
 w_implications=w_imp_gc+w_imp_modeling_scaling
 w_conclusions=248
 w_total=w_intro+w_vertgradients+w_implications+w_conclusions
@@ -140,24 +140,21 @@ As the climate changes, integrating the patterns and mechanisms reviewed here in
 
 # I. Introduction
 
-<!--This first paragraph is all good content, but mostly pretty basic background knowledge that could be cut if needed.-->
-Forest responses and feedbacks to climate change will critically influence Earth's furture climate.
 Global average temperatures have risen 1.2$^\circ$C since 1900 [@rohdeBerkeleyEarthLand2020] and are expected to reach +1.5$^\circ$C by 2040 [@ipccClimateChange20212021], accompanied by increasing severity and frequency of heat waves and hotter droughts [@meehlMoreIntenseMore2004; @ipccClimateChange20212021].
-These changes are expected to affect tree metabolism and forest ecosystem function [@breshearsUnderappreciatedPlantVulnerabilities2021; @portnerScientificOutcomeIPBESIPCC2021] by altering rates of photosynthesis and respiration [@breshearsUnderappreciatedPlantVulnerabilities2021; <!--@corlettImpactsWarmingTropical2011-->; @scafaroResponsesLeafRespiration2021], causing foliar damage during heat waves [@osullivanThermalLimitsLeaf2017; @corlettImpactsWarmingTropical2011], and reducing growth and elevating mortality during drought [@breshearsUnderappreciatedPlantVulnerabilities2021; @mcdowellPervasiveShiftsForest2020]. 
-Warming may increase or decreased tree growth and forest carbon sequestration on balance, with decreases being more common globally [@oishiWarmerTemperaturesReduce2018; @sullivanLongtermThermalSensitivity2020; @anderson-teixeiraCarbonCyclingMature2021]. 
-The resulting feedbacks to climate and carbon storage, and changes in albedo and hydrology will in turn impact the future trajectory of climate change [@bonan_ecological_2016], yet the degree of the impact remains uncertain [@krauseLargeUncertaintyCarbon2018; @friedlingsteinClimateCarbonCycle2006].
+These changes are expected to affect tree metabolism and forest ecosystem function [@breshearsUnderappreciatedPlantVulnerabilities2021; @portnerScientificOutcomeIPBESIPCC2021] by altering rates of photosynthesis and respiration [@breshearsUnderappreciatedPlantVulnerabilities2021; <!--@corlettImpactsWarmingTropical2011;--> @scafaroResponsesLeafRespiration2021], causing foliar damage during heat waves [@osullivanThermalLimitsLeaf2017; @corlettImpactsWarmingTropical2011], and reducing growth and elevating mortality during drought [@breshearsUnderappreciatedPlantVulnerabilities2021; @mcdowellPervasiveShiftsForest2020]. 
+The resulting feedbacks to climate and carbon storage, and changes in albedo and hydrology will in turn impact the future trajectory of climate change [@bonan_ecological_2016], yet future forest dynamics remain one of the largest sources of uncertainty in Earth system model climate change projections [@friedlingsteinClimateCarbonCycle2006; @krauseLargeUncertaintyCarbon2018; @aroraCarbonConcentrationCarbon2020].
  
-Much uncertainty arises because effects of warming on trees depend on size and crown position. 
-Forests are vertically and horizontally stratified, and canopies moderate climatic conditions [@ozanneBiodiversityMeetsAtmosphere2003; @nakamuraForestsTheirCanopies2017], including buffering understory microclimates from extreme meteorological conditions [@zellweger_seasonal_2019]. 
-The resulting vertical stratification of the biophysical environment such as temperature, light, wind, humidity and carbon dioxide (CO~2~) concentrations that influences leaf traits, thermoregulation and metabolism, with implications for whole plant performance [@fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016a].
-Although these vertical gradients strongly influence plant metabolism, demography, and ecology, we lack comprehensive understanding of these gradients [but see @niinemetsPhotosyntheticAcclimationSimultaneous2004].
-Importantly, this limits our ability to understand how warming temperatures will affect leaf-level metabolism, whole-plant performance, and, in turn, forest ecosystem dynamics, biodiversity, energy balance, ecosystem function, and biosphere-atmosphere interactions.
+Future forest dynamics will depend on the impacts of climate change across trees varying in height and crown position. 
+Forests are vertically stratified, and canopies moderate climatic conditions [@ozanneBiodiversityMeetsAtmosphere2003; @nakamuraForestsTheirCanopies2017], including buffering understory microclimates from extreme meteorological conditions [@zellweger_seasonal_2019]. 
+Vertical gradients in biophysical variables such as temperature, light, wind, humidity and carbon dioxide (CO~2~) concentrations influence leaf temperatures, traits, and metabolism, with implications for whole plant performance [@fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016a].
+Although forest vertical stratification strongly influences plant metabolism, demography, and ecology, we lack comprehensive understanding of these gradients [but see @niinemetsPhotosyntheticAcclimationSimultaneous2004].
+Importantly, this limits our ability to understand how warming temperatures will affect leaf-level metabolism, whole-plant performance, and, in turn, forest dynamics, biodiversity, energy balance, ecosystem function, and biosphere-atmosphere interactions.
 
 Here, we review vertical gradients in the biophysical environment and plant form and function in forests, focusing on five key themes (Fig. `r fig_schematic`):
 (1) the biophysical environment;
 (2) leaf temperature ($T_{leaf}$);
 (3) the leaf traits that most strongly influence $T_{leaf}$ and thermal tolerance;
-(4) leaf gas exchange (including stomatal and boundary layer conductance, photosynthesis, and respiration) and its thermal sensitivity; and 
+(4) leaf gas exchange and its thermal sensitivity; and 
 (5) tree and ecosystem ecology.
 We then consider the implications for understanding forest responses to global change and how they scale across space and time. 
 
@@ -567,7 +564,6 @@ Ultimately, to achieve the important goal of understanding feedbacks between the
 
 ### Representing Vertical Gradients in Models
 
-Future forest dynamics remain one of the largest sources of uncertainty in Earth system model projections of global carbon cycling [@friedlingsteinClimateCarbonCycle2006; @aroraCarbonConcentrationCarbon2020].
 Dynamic global vegetation models (DGVMs), which comprise the land surface models in Earth system models, are used to predict the global distribution of vegetation types and biosphere-atmosphere feedbacks [@foleyIntegratedBiosphereModel1996; @sitchEvaluationEcosystemDynamics2003; @woodwardVegetationDynamicsSimulating2004]. 
 DGVMs operate at a range of scales and vary in complexity, from detailed individual-based models (i.e., forest gap models), which represent vegetation at the level of individual plants, which capturing spatial variability in light environment and microclimates at high 3D spatial resolution [@shugartGapModelsTheir2018], to big-leaf models that reduce 3D vegetation structure to single vegetation layer, implicitly capturing vertical profiles in light, photosynthetic capacity and other features by assuming those profiles are exponential and thus can be integrated analytically [@bonanDynamicGlobalVegetation2003; @krinnerDynamicGlobalVegetation2005]. 
 This simplification is computationally more efficient, but does not always capture observed vertical profiles (sections 1-4; for example, vertical shifts in the balance between stomatal conductance and photosynthetic capacity, sections 4.1-4.2) and cannot capture important demographic processes and vertical light competition [@hurttTerrestrialModelsGlobal1998; @krinnerDynamicGlobalVegetation2005; @smithRepresentationVegetationDynamics2001]. 
@@ -586,13 +582,12 @@ Improved representation of vertical variation in forest structure and ecosystem 
 Moreover, given the anticipated importance of mid-canopy and understory trees in ecosystem resilience given increasing mortality of canopy trees, it is essential that models separately represent these strata. 
 A key question is whether existing models adequately represent the processes that underpin understory and large tree responses to thermal stress.
 Most models have been developed to capture dynamics in the upper canopy, given the disproportionate role of large trees in ecosystem dynamics (Fig. `r fig_ecosystem`). 
-Less attention has focused on developing and validating understory tree dynamics and responses to perturbations in models. 
-This is due in large part to the paucity of observational and experimental studies needed to resolve key patterns and underlying mechanisms (sections 4, 5).
+Less attention has focused on developing and validating understory tree dynamics and responses to perturbations in models, in large part to the paucity of observational and experimental studies needed to resolve key patterns and underlying mechanisms (sections 4, 5).
 Pairing of models with observational studies is key to further improving our mechanistic understanding of vertical gradients and their implications.
 
 Though an improvement over big-leaf models, DGVMs that separate the canopy into only two layers [e.g., sunlit and shaded portions, @depurySimpleScalingPhotosynthesis1997] may not be able to capture important within-canopy variation in terms of leaf dynamics [e.g., seasonal shifts in vertical leaf area distributions, Table 1, @smithSeasonalDroughtrelatedChanges2019] and functions (e.g., thermal responses, Table 2). 
 Multi-layered ecosystem models will likely be necessary for accurately predicting future forest function [e.g., @bonanMovingIncorrectUseful2021].
-In addition, capturing vertical gradients in ET, GPP, respiration, and woody growth, and subsequently the net ecosystem effects (Figs. `r fig_treerings` - `r fig_ecosystem`), requires improved characterization of the functional response of leaf-level processes (Table `r table_leaf_metabolism`, Fig. `r fig_leaf_T`) to vertically varying abiotic conditions (Fig. `r fig_NEON_vertical`), and the role of traits (Table `r table_leaf_traits`) in mediating responses to thermal sensitivity. 
+In addition, capturing vertical gradients in ET, GPP, respiration, and woody growth, and subsequently the net ecosystem effects, requires improved characterization of the functional response of leaf-level processes to vertically varying abiotic conditions, and the role of traits in mediating responses to thermal sensitivity. 
 
 
 ### Scaling in situ data with remote sensing
