cleanup/ condensing : NOW <10K words!
removed some excessive citations to tables/ figures, "e.g."s in front of references...

#113

@NidhiVinod , we're now at 9993 words! It would still be good to do some more cleanup/ condensing, proofread, but (1) it's short enough, and (2) we can submit on Monday!

--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -58,9 +58,9 @@ SIfig_NEON_all_legend <- "Figure S1. Vertical gradients in micrometeorological c
 
 #Word count
 w_intro=374
-w_biophys=1576
-w_tleaf=752
-w_traits= 2471
+w_biophys=1548
+w_tleaf=736
+w_traits= 2460
 w_met=1000
 w_ecol=1353
 w_vertgradients=w_biophys+w_tleaf+w_traits+w_met+w_ecol
@@ -173,10 +173,10 @@ Although we focus on vertical gradients, it is important to note that in heterog
 
 ### 1.1 Foliage 
 
-Canopy foliage is the primary physical barrier between the atmosphere and the forest floor, buffering multiple aspects of the understory conditions from large fluctuations in conditions experienced above the canopy. It strongly influences -- and is influenced by -- the vertical biophysical gradient (Fig. `r fig_NEON_vertical`).
+Canopy foliage is the primary physical barrier between the atmosphere and the forest floor, buffering multiple aspects of the understory conditions from large fluctuations in conditions experienced above the canopy. It strongly influences -- and is influenced by -- the vertical biophysical gradient.
 Vertical patterns in leaf area density (*i.e.*, leaf area per unit volume) differ across forests (Fig. `r fig_NEON_vertical`a-b, Supporting Information Figure `r SIfig_NEON_all`). 
-In tropical and temperate forests with dense broadleaf canopies, leaf area density is generally highest in the canopy layer (i.e., that formed by the crowns of dominant trees), but understory leaf area density is often high as well, sometimes causing undulating patterns with height [e.g., SCBI, SERC and HARV, Fig. `r fig_NEON_vertical`a,<!--@terborghVerticalComponentPlant1985;--> @ashtonComparisonsStructureMixed1992; @koikeCanopyStructureTropical1993; @parkerVerticalProfileCanopy1989; @dominguesParameterizationCanopyStructure2005]. 
-In forests with more open upper canopies, including many needle-leaf forests, leaf area density can be greatest in the lower canopy or understory [e.g., PUUM and WREF, Fig. `r fig_NEON_vertical`a, @baldocchiSeasonalVariationEnergy1997; @hanberryOpenForestEcosystems2020; @lawLeafAreaDistribution2001;@bonan_ecological_2016]. 
+In tropical and temperate forests with dense broadleaf canopies, leaf area density is generally highest in the canopy layer (i.e., that formed by the crowns of dominant trees), but understory leaf area density is often high as well, sometimes causing undulating patterns with height [<!--e.g., SCBI, SERC and HARV, Fig. `r fig_NEON_vertical`a,--><!--@terborghVerticalComponentPlant1985;--> @parkerVerticalProfileCanopy1989; @ashtonComparisonsStructureMixed1992; @koikeCanopyStructureTropical1993;  @dominguesParameterizationCanopyStructure2005]. 
+In forests with more open upper canopies, including many needle-leaf forests, leaf area density can be greatest in the lower canopy or understory [<!--e.g., PUUM and WREF, Fig. `r fig_NEON_vertical`a,--> @baldocchiSeasonalVariationEnergy1997; @hanberryOpenForestEcosystems2020; @lawLeafAreaDistribution2001;@bonan_ecological_2016]. 
 Soil moisture conditions, topography, and gap formations following disturbances all alter foliage patterns [e.g., @bonan_ecological_2016; @almeidaContrastingFireDamage2016; @starkAmazonForestCarbon2012; @hanberryOpenForestEcosystems2020]. 
 In addition, seasonally dry and wet conditions, deciduousness, and phenology contribute to temporally shifting leaf area density patterns [<!--@parkerStructuralPhenologyLeaf2004;--> @parkerConsequencesEnvironmentalHeterogeneity2019; @smithSeasonalDroughtrelatedChanges2019; @tangLightdrivenGrowthAmazon2017; @nunesForestFragmentationImpacts2022]. 
 In this review, we focus on growing season conditions (peak leaf area index, LAI) unless otherwise noted.
@@ -185,10 +185,10 @@ In this review, we focus on growing season conditions (peak leaf area index, LAI
 
 The intensity of visible and photosynthetically active radiation (PAR, 400-700nm) decreases from the canopy top to the forest floor, with a profile whose shape is modified by leaf area density, leaf clumping, canopy height, and vertical structure across species and forest types [Fig. `r fig_NEON_vertical`d, Supporting Information Figure `r SIfig_NEON_all`, @belandVerticalStructureHeterogeneity2021; @koike_leaf_2001; @binLeafTraitExpression2022].
 Canopy foliage absorbs a large portion of PAR (400-700nm), and selectively filters light, thereby altering the spectrum of PAR creceived in the lower canopy and understory layers. 
-The ratio of red (~685-690 nm) to far red (~730-740 nm) light declines along qith total PAR with increasing depth in the canopy, and understories receive diffuse light enriched in near infrared radiation (700-1000 nm)  [@decastroLightSpectralComposition2000; @poorterLeafOpticalProperties2000].
+The ratio of red (~685-690 nm) to far red (~730-740 nm) light declines along qith total PAR with increasing depth in the canopy, and understories receive diffuse light enriched in near infrared radiation [700-1000 nm; @decastroLightSpectralComposition2000; @poorterLeafOpticalProperties2000].
 Mid-canopies and understories experience a highly dynamic light environment due to sunflecks, or brief increases in direct solar radiation, caused by small canopy gaps, wind-induced canopy movements or the sun's passage across a dynamically structured canopy surface [@waySunflecksTreesForests2012].
-This light gradient is more pronounced in dense canopies, including broad-leaf and mixed forests (e.g., SCBI, SERC and HARV, Fig. `r fig_NEON_vertical`d), than in forests with more open upper canopies, including many conifer forests [e.g., OSBS, PUUM, and WREF, Fig. `r fig_NEON_vertical`d, Supporting Information Figure `r SIfig_NEON_all`, @chazdonPhotosyntheticLightEnvironments1984; @aussenacInteractionsForestStands2000a; @tymenQuantifyingMicroenvironmentalVariation2017;  @parkerConsequencesEnvironmentalHeterogeneity2019; @bartemucciOverstoryInfluencesLight2006; @baldocchiSeasonalVariationEnergy1997]. 
-This light gradient drives variation in leaf traits (Table 1), photosynthetic capacity (section 4.2) and leaf temperature (sections 2, 4.2).
+This light gradient is more pronounced in dense canopies, including broad-leaf and mixed forests, than in forests with more open upper canopies, including many conifer forests [Fig. `r fig_NEON_vertical`d, Supporting Information Figure `r SIfig_NEON_all`, @chazdonPhotosyntheticLightEnvironments1984; @aussenacInteractionsForestStands2000a; @tymenQuantifyingMicroenvironmentalVariation2017;  @parkerConsequencesEnvironmentalHeterogeneity2019; @bartemucciOverstoryInfluencesLight2006; @baldocchiSeasonalVariationEnergy1997]. 
+This light gradient drives variation in leaf temperature (section 2), traits (section 3), and photosynthesis (section 4.2).
 
 ### 1.3 Turbulent transport and wind
 Vertical transport in forest canopies is dominated by turbulent transport, making vertical profiles of wind speed, water vapor, CO~2~, and temperature more difficult to predict and to generalize on the basis of theoretical first principles compared to radiation profiles. 
@@ -227,10 +227,10 @@ These usually-modest gradients in $T_{air}$ combine with the above-described gra
 $T_{leaf}$ is strongly tied, and usually within a few degrees of, $T_{air}$ [@drakeNoEvidenceHomeostatic2020;@rey-sanchez_spatial_2016], but can be substantially warmer or cooler under certain conditions [@rey-sanchez_spatial_2016;@doughtyAreTropicalForests2008;@vogelLeavesLowestHighest2009]. 
 Deviation of $T_{leaf}$ from $T_{air}$ is influenced by other micrometeorological drivers and by leaf traits and stomatal conductance (Fig. `r fig_leaf_T`; Note `r Notes_leafTbiophysics`), all of which vary across forest vertical gradients (Fig. `r fig_schematic`).
 High radiation in the upper canopy (Fig. `r fig_NEON_vertical`) implies that upper canopy leaves often have higher $T_{leaf}-T_{air}$, and thus are often warmer than understory leaves (Fig. `r fig_leaf_T`a).
-However, higher wind speeds (Fig. `r fig_NEON_vertical`) reduce $T_{leaf}-T_{air}$ [Fig. `r fig_leaf_T`b, @niinemetsPhotosyntheticAcclimationSimultaneous2004; @bonan_ecological_2016]. 
+However, higher wind speeds reduce $T_{leaf}-T_{air}$ [Fig. `r fig_leaf_T`b, @niinemetsPhotosyntheticAcclimationSimultaneous2004; @bonan_ecological_2016]. 
 In addition, adaptive leaf traits that increase $g_b$ and $g_s$ (sections 3, 4.1) mediate the direct effects of solar radiation on upper canopy leaves and result in higher rates of heat loss (Fig. `r fig_leaf_T`b-e). 
-In contrast, in the lower canopy, greater RH and lower wind speeds may limit $\lambda E$ (through reduced VPD and $g_b$), increasing $T_{leaf}$ [Fig. `r fig_leaf_T`, @perezIncreasingHumidityThreatens2018; @tibbittsHumidityPlants1979].
-Leaves in these normally-shaded locations experience rapid light and temperature surges during sunflecks (>10$^\circ$C)  [@waySunflecksTreesForests2012].
+In contrast, in the lower canopy, greater RH and lower wind speeds may limit $\lambda E$ (through reduced VPD and $g_b$), increasing $T_{leaf}$ [@perezIncreasingHumidityThreatens2018; @tibbittsHumidityPlants1979].
+Leaves in these normally-shaded locations experience rapid light and temperature surges during sunflecks [>10$^\circ$C; @waySunflecksTreesForests2012].
 
 
 ![**Figure `r fig_leaf_T`. Theoretical expectations for variation in the difference between leaf and air temperatures, $T_{Leaf}-T_{air}$, in response to (a) shortwave radiation, (b) wind speed, (c) relative humidity, (d) leaf characteristic dimension, and (e) stomatal conductance.** Leaf temperatures were modeled using the  *tealeaves* R package of @muir_tealeaves_2019 parameterized to represent a broadleaf species (*Quercus rubra* L.) in a mesic temperate forest (Harvard Forest, Massachusetts, USA) under hypothetical moist and drought conditions, as detailed in Supplementary Information Methods `r appendix_tealeaves_methods`. In each scenario, the independent variable was allowed to vary while other parameters were held constant at the values given in the table of biophysical constants. Dots along each line correspond to the biophysical constant assigned for the independent variable in the other scenarios, and therefore represent the modeled value for $T_{Leaf}-T_{air}$ with all parameters set to the biophysical constants given in the table. Biohphysical constants in the the table include: shortwave radiation (swr), wind speed (ws), relative humidity (rh), leaf characteristic dimension (lcd), stomatal conductance (gs), air temperature (tair). ](leaf_energy_balance/fig3_leafenergy.png)
@@ -243,34 +243,35 @@ This is because sun leaves are exposed to higher irradiance and VPD, and therefo
 In contrast, under conditions conducive to stomatal opening, higher wind speeds and $g_b$ enable cooling in the upper canopy, whereas lower wind and $g_b$ in the understory limit evaporative cooling  [Fig. `r fig_leaf_T`b,d, @robertsStomatalBoundaryLayerConductances1990; @martin_boundary_1999; @leighInfluenceLeafSize2017 <!-- @songTreeSurfaceTemperature2020-->]. 
 Thus, while understory and within-canopy shade leaves can remain cooler under lower radiation, their environment is less conducive to dissipating excess heat compared to upper-canopy leaves. 
 Limitations in heat dissipation in shade leaves, together with physiological propensities, may cause above-optimal $T_{leaf}$ under slight heat or drought stress or during sunflecks [@leighInfluenceLeafSize2017; @songTreeSurfaceTemperature2020; @schymanskiStomatalControlLeaf2013].
-In addition to lower wind speeds (Fig. `r fig_NEON_vertical`), higher RH (lower VPD) in the understory and inner canopy (Fig. `r fig_NEON_vertical`) also inhibits evaporative cooling, thus increasing $T_{leaf}-T_{air}$ [Fig. `r fig_leaf_T`c, @tibbittsHumidityPlants1979; @songTreeSurfaceTemperature2020;  @perezIncreasingHumidityThreatens2018; @konradLeafTemperatureIts2021a; @dietzVerticalPatternsDuration2007].
+In addition to lower wind speeds, higher RH (lower VPD) in the understory and inner canopy also inhibits evaporative cooling, thus increasing $T_{leaf}-T_{air}$ [Fig. `r fig_leaf_T`c, @tibbittsHumidityPlants1979; @songTreeSurfaceTemperature2020;  @perezIncreasingHumidityThreatens2018; @konradLeafTemperatureIts2021a; @dietzVerticalPatternsDuration2007].
 
-Vertical $T_{leaf}$ gradients are also expected to vary with canopy structure. 
+Vertical $T_{leaf}$ gradients also vary with canopy structure (Fig. `r fig_NEON_vertical`h, Supporting Information Figure `r SIfig_NEON_all`). 
 Forests with closed canopies and high LAI, including tropical and temperate broadleaf forests, act as a parasol, absorbing most incoming radiation and preventing vertical air mixing in the understory. 
-Therefore, in these forests, leaves in the upper canopy can experience greater $T_{leaf}-T_{air}$ and higher maximum $T_{leaf}$ than lower-canopy leaves, in some cases exceeding photosynthetic temperature optima ($T_{opt}$) because of $g_s$ limitation and high radiation [@carterExperimentalWarmingTropical2021; <!--@niinemetsShapeLeafPhotosynthetic1999-->; @doughtyAreTropicalForests2008; <!--@fauset_differences_2018-->; @mauTemperateTropicalForest2018; @millerOnlySunlitLeaves2021; <!--@rey-sanchez_spatial_2016; @pauTropicalForestTemperature2018-->]. 
-In contrast, open canopies with lower LAI allow more vertical air mixing and sunlight into the understory, which can either neutralize a $T_{leaf}$ gradient or elevate $T_{leaf}-T_{air}$ at lower heights relative to the upper canopy [Fig. `r fig_NEON_vertical`h, Supporting Information Figure `r SIfig_NEON_all`; <!--@hadleyInfluenceKrummholzMat1987--> @mullerEvidenceEfficientNonevaporative2021; @martin_boundary_1999; @zweifelMiddayStomatalClosure2002]. 
-The latter can result from a combination of still air at lower heights (Fig. `r fig_NEON_vertical`e), and sunflecks or the 'canopy greenhouse effect', as mentioned above [@hardwickRelationshipLeafArea2015; @schymanskiStomatalControlLeaf2013], and because shade leaves tend to have lower $g_s$  [@schymanskiStomatalControlLeaf2013]. Similarly, in very open forests or savannas, trees growing close to the ground can experience greater heat stress in their lower than upper canopies due to heat from the soil increasing $T_{leaf}$ of foliage near the ground [Fig. `r SIfig_NEON_all`, @hadleyInfluenceKrummholzMat1987; @curtis_intracanopy_2019; @johnstonWhatLiesVerticalinpress]. 
+Therefore, in these forests, leaves in the upper canopy can experience greater $T_{leaf}-T_{air}$ and higher maximum $T_{leaf}$ than lower-canopy leaves, in some cases exceeding photosynthetic temperature optima ($T_{opt}$) because of $g_s$ limitation and high radiation [@carterExperimentalWarmingTropical2021; <!--@niinemetsShapeLeafPhotosynthetic1999;-->@doughtyAreTropicalForests2008; <!--@fauset_differences_2018;--> @mauTemperateTropicalForest2018; @millerOnlySunlitLeaves2021 <!--@rey-sanchez_spatial_2016; @pauTropicalForestTemperature2018-->]. 
+In contrast, open canopies with lower LAI allow more vertical air mixing and sunlight into the understory, which can either neutralize a $T_{leaf}$ gradient or elevate $T_{leaf}-T_{air}$ at lower heights relative to the upper canopy [<!--@hadleyInfluenceKrummholzMat1987--> @mullerEvidenceEfficientNonevaporative2021; @martin_boundary_1999; @zweifelMiddayStomatalClosure2002]. 
+The latter can result from a combination of still air at lower heights, and sunflecks or the 'canopy greenhouse effect' [section 1.5, @schymanskiStomatalControlLeaf2013; @hardwickRelationshipLeafArea2015], and because shade leaves tend to have lower $g_s$  [@schymanskiStomatalControlLeaf2013]. 
+Similarly, in very open forests or savannas, trees growing close to the ground can experience greater heat stress in their lower than upper canopies due to heat from the soil increasing $T_{leaf}$ of foliage near the ground [@hadleyInfluenceKrummholzMat1987; @curtis_intracanopy_2019; @johnstonWhatLiesVerticalinpress]. 
 One of the few remote sensing studies combining drone lidar and thermal data found strong vertical gradients in midday plant temperature with ~5$^{\circ}$C cooler temperatures lower in the vertical profile of a dense subalpine stand in the alpine Eastern Swiss Alps [@websterThreedimensionalThermalCharacterization2018]. 
 However, the opposite trend was observed for a lone tree surrounded by grass in a California open oak woodland, with cooler temperatures at the top of the crown, indicating a strong influence of closed-canopy shading on vertical temperature gradients [@johnstonWhatLiesVerticalinpress]. 
 
 ## 3. Leaf traits 
 
 Anatomical, structural and biochemical leaf traits vary vertically across forest strata at anatomical, structural and biochemical levels [Table `r table_leaf_traits`, @sackHowStrongIntracanopy2006; @niinemetsWorldwideAnalysisWithincanopy2015; @chenLeafEconomicsSpectrum2020], shaping vertical profiles of leaf temperature, metabolism, and thermal sensitivity [@michaletzPlantThermoregulationEnergetics2015a;@michaletzEnergeticCarbonEconomic2016a; @zwienieckiHydraulicLimitationsImposed2004]. 
-Vertical variation in leaf structure and composition has been long recognized, with sun and shade leaf traits distinguished for more than 100 years [@haberlandtPhysiologicalPlantAnatomy1914; @salisburyCausesEcologicalSignificance1928].
+Vertical variation in leaf structure and composition has been long recognized, with sun and shade leaf traits distinguished for over a century [@haberlandtPhysiologicalPlantAnatomy1914; @salisburyCausesEcologicalSignificance1928].
 Early work attributed differences among leaves to sun versus shade [@wyliePrinciplesFoliarOrganization1951; @vogelSunLeavesShade1968], and this tendency grew given the parallel differences observed for plants grown in sun versus shade [@boardmanComparativePhotosynthesisSun1977; @abramsLeafStructuralCharacteristics1990].
-More recent work has extended the focus from light alone to leaf height in the canopy, as important in determining differences in leaf structure and function that can partially mitigate the effects of gravity and hydraulic pathlength on leaves higher up in the canopy [@sackHowStrongIntracanopy2006; @kochLimitsTreeHeight2004; @burgessRegressionsLeafTraits2006].
+More recent work has extended the focus from light alone to leaf height, as the latter shapes differences in leaf structure and function that can partially mitigate the effects of gravity and hydraulic pathlength on leaves higher up in the canopy [@sackHowStrongIntracanopy2006; @kochLimitsTreeHeight2004; @burgessRegressionsLeafTraits2006].
 For example, leaf mass per area (LMA), photosynthetic capacity ($A_{max}$ per area) and $g_s$ have been observed to increase with height, independently of light [@thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012; @cavender-baresChangesDroughtResponse2000; @binLeafTraitExpression2022].
-Thus, leaves develop differently according to the irradiance and hydraulic stress associated with their canopy location, height and evaporative load, with additional potential influences of branch ontogenetic stage [Table `r table_leaf_traits`, @carterExperimentalWarmingTropical2021; @niinemetsResponsesForestTrees2010; @casasSunShadeLeaves2011;  @keenanGlobalLeafTrait2016; @binLeafTraitExpression2022; @sackHowStrongIntracanopy2006; @chenLeafEconomicsSpectrum2020; @niinemetsVariabilityLeafMorphology2015].
+Thus, leaves develop differently according to the irradiance and hydraulic stress associated with their canopy location, height and evaporative load, with additional potential influences of branch ontogenetic stage [@carterExperimentalWarmingTropical2021; @niinemetsResponsesForestTrees2010; @casasSunShadeLeaves2011;  @keenanGlobalLeafTrait2016; @binLeafTraitExpression2022; @sackHowStrongIntracanopy2006; @chenLeafEconomicsSpectrum2020; @niinemetsVariabilityLeafMorphology2015].
 Plasticity throughout the canopy may emerge when development of new leaves is influenced by information from adjacent mature leaves or apical meristems, including  (e.g., for deciduous species expanding leaves) a “memory” of previous conditions in that location, and may also acclimate during and after expansion to the current microclimate [@zwienieckiHydraulicLimitationsImposed2004].
 Overall, leaves may optimize their biochemistry, anatomy and structure for their local conditions [@lloydOptimisationPhotosyntheticCarbon2010; @buckleyOptimalCarbonPartitioning2021; @hikosakaOptimalNitrogenDistribution2014; @kitaoCanopyNitrogenDistribution2018; @niinemetsPhotosynthesisResourceDistribution2007]. 
 Yet, while these studies have clarified many details of leaf differences throughout the canopy, no papers have integrated the many differences in leaf traits throughout the canopy in a cohesive framework.
 Rather, much of our understanding of trait coordination is based on the leaf economics spectrum concept developed across diverse species using sun leaves [@wrightWorldwideLeafEconomics2004; @keenanGlobalLeafTrait2016; @chenLeafEconomicsSpectrum2020]. 
 As canopy shade is known to alter these trait relationships [@osnasDivergentDriversLeaf2018], further research is needed to characterize trait relationships and responses vertically through the full range of canopy microenvironments.
 
-Across the vertical gradient, traits vary (1) within individuals, across height and light gradients [e.g., @zwienieckiHydraulicLimitationsImposed2004; @sackHowStrongIntracanopy2006; @binLeafTraitExpression2022], (2) across individuals of the same species, often representing an ontogenetic trajectory from the understory to the canopy [e.g., @carterExperimentalWarmingTropical2021; @niinemetsResponsesForestTrees2010], and (3) among understory and canopy species [e.g., @lloydOptimisationPhotosyntheticCarbon2010]. 
+Across the vertical gradient, traits vary (1) within individuals, across height and light gradients [@zwienieckiHydraulicLimitationsImposed2004; @sackHowStrongIntracanopy2006; @binLeafTraitExpression2022], (2) across individuals of the same species, often representing an ontogenetic trajectory from the understory to the canopy [@carterExperimentalWarmingTropical2021; @niinemetsResponsesForestTrees2010], and (3) among understory and canopy species [@lloydOptimisationPhotosyntheticCarbon2010]. 
 Most studies characterizing variation in leaf traits or metabolism examine intraspecific patterns (categories 1 and 2), which are therefore the main focus of this review (Table `r table_leaf_traits`).
-Generally, the pattern of fundamental trait adaptations to light gradients across forest species is similar to within-species trends [@rozendaalPlasticityLeafTraits2006; @thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012; @binLeafTraitExpression2022; @cavaleri_height_2010; @lloydOptimisationPhotosyntheticCarbon2010]; however, vertical trends vary across trees [@lloydOptimisationPhotosyntheticCarbon2010], and counter-gradient variation can exist [e.g., @luskWhyAreEvergreen2008].
-Many leaf physiological parameters can be estimated based on foliage height profiles [e.g., @cavaleri_height_2010; @lloydOptimisationPhotosyntheticCarbon2010].
+Generally, the pattern of fundamental trait adaptations to light gradients across forest species is similar to within-species trends [@rozendaalPlasticityLeafTraits2006; @thomasPhotosyntheticDifferencesSaplings2002; @houterOntogeneticChangesLeaf2012; @binLeafTraitExpression2022; @cavaleri_height_2010; @lloydOptimisationPhotosyntheticCarbon2010]; however, vertical trends vary across trees [@lloydOptimisationPhotosyntheticCarbon2010], and counter-gradient variation can exist [@luskWhyAreEvergreen2008].
+Many leaf physiological parameters can be estimated based on foliage height profiles [@cavaleri_height_2010; @lloydOptimisationPhotosyntheticCarbon2010].
 
 \newpage
 **Table `r table_leaf_traits`.** Summary of typically observed variation in leaf traits and its thermal sensitivity across the vertical gradient and/or between sun and shade leaves. Studies listed here were compiled using a systematic review process, as described in Supplementary Information Methods `r appendix_lit_review_methods`.
